--- a/flaskApp/templates/index.html
+++ b/flaskApp/templates/index.html
@@ -476,42 +476,6 @@
                             </div>
                         </div>
                     </div>
-                    <div class="ProjectItem" id="Calcom" onclick="openThePopup('Calcom')">
-                        <img src="https://static.wixstatic.com/media/a8c221_e651c0f32307486191c3d5793870b8c3~mv2.png/v1/fill/w_646,h_406,al_c,lg_1,q_85/logo.webp" alt="Calcom">
-                        <h3>
-                            Calcom
-                        </h3>
-                        <p>
-                            "Your solution to computation."
-                        </p>
-                        <div class="popupData">
-                            <div class="popupBanner">
-                                <img src="https://static.wixstatic.com/media/a8c221_e651c0f32307486191c3d5793870b8c3~mv2.png/v1/fill/w_646,h_406,al_c,lg_1,q_85/logo.webp" alt="CODE RED" class="popupBanner">
-                            </div>
-                            <div class="popupHead">
-                                <h3>
-                                    Calcom
-                                </h3>
-                                <div class="xContainer">
-                                    <i class="fa-solid fa-x X" onclick="closeThePopup()"></i>
-                                </div>
-                            </div>
-                            <div class="popupContent">
-                                <p>
-                                    Calcom is a graphing calculator made by PyCalc X. It has a TON of features including number theory and matrices
-                                </p>
-                            </div>
-                            <div class="popupFooter">
-                                <h3>
-                                    Links:
-                                </h3>
-                                <div class="links">
-                                    <a href="https://pycalc-x.github.io/Calcom-Web/" target="_blank"><i class="fa-solid fa-globe fa-2x socialsIcon"></i></a>
-                                    <a href="https://www.youtube.com/channel/UCDp9F9yQ5YUx5-WegWRoOAA" target="_blank"><i class="fa-brands fa-youtube fa-2x socialsIcon"></i></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                     <div class="ProjectItem" id="LivesSMP" onclick="openThePopup('LivesSMP')">
                         <img src="https://ih1.redbubble.net/image.927840418.5711/pp,840x830-pad,1000x1000,f8f8f8.jpg" alt="Lives SMP">
                         <h3>
@@ -546,6 +510,41 @@
                                 <div class="links">
                                     <a href="https://www.spigotmc.org/resources/lives-smp.96177/" target="_blank"><i class="fa-solid fa-globe fa-2x socialsIcon"></i></a>
                                     <a href="https://www.youtube.com/watch?v=vq0kGmKIHyM" target="_blank"><i class="fa-brands fa-youtube fa-2x socialsIcon"></i></a>
+                                </div>
+                            </div>
+                        </div>        
+                    </div>
+                    <div class="ProjectItem" id="lightsaber" onclick="openThePopup('lightsaber')">
+                        <img src="{{ url_for('static',filename='images/lightsabermodel.png') }}" alt="Lives SMP">
+                        <h3>
+                            Lightsaber
+                        </h3>
+                        <p>
+                            "A cool lightsaber I designed"
+                        </p>
+                        <div class="popupData">
+                            <div class="popupBanner">
+                                <img src="{{ url_for('static',filename='images/Lightsaberwithblade.JPEG') }}" alt="CODE RED" class="popupBanner">
+                            </div>
+                            <div class="popupHead">
+                                <h3>
+                                    Lightsaber
+                                </h3>
+                                <div class="xContainer">
+                                    <i class="fa-solid fa-x X" onclick="closeThePopup()"></i>
+                                </div>
+                            </div>
+                            <div class="popupContent">
+                                <p>
+                                    I made this lightsaber for a project in school. I hope to print it. First cool thing I made with CAD software. 
+                                </p>
+                            </div>
+                            <div class="popupFooter">
+                                <h3>
+                                    Links:
+                                </h3>
+                                <div class="links">
+                                    <a href="https://a360.co/3VDHZrd" target="_blank"><i class="fa-solid fa-cube"></i></a>
                                 </div>
                             </div>
                         </div>        
@@ -705,6 +704,42 @@
                                 </div>
                             </div>
                         </div>          
+                    </div>
+                    <div class="ProjectItem" id="Calcom" onclick="openThePopup('Calcom')">
+                        <img src="https://static.wixstatic.com/media/a8c221_e651c0f32307486191c3d5793870b8c3~mv2.png/v1/fill/w_646,h_406,al_c,lg_1,q_85/logo.webp" alt="Calcom">
+                        <h3>
+                            Calcom
+                        </h3>
+                        <p>
+                            "Your solution to computation."
+                        </p>
+                        <div class="popupData">
+                            <div class="popupBanner">
+                                <img src="https://static.wixstatic.com/media/a8c221_e651c0f32307486191c3d5793870b8c3~mv2.png/v1/fill/w_646,h_406,al_c,lg_1,q_85/logo.webp" alt="CODE RED" class="popupBanner">
+                            </div>
+                            <div class="popupHead">
+                                <h3>
+                                    Calcom
+                                </h3>
+                                <div class="xContainer">
+                                    <i class="fa-solid fa-x X" onclick="closeThePopup()"></i>
+                                </div>
+                            </div>
+                            <div class="popupContent">
+                                <p>
+                                    Calcom is a graphing calculator made by PyCalc X. It has a TON of features including number theory and matrices
+                                </p>
+                            </div>
+                            <div class="popupFooter">
+                                <h3>
+                                    Links:
+                                </h3>
+                                <div class="links">
+                                    <a href="https://pycalc-x.github.io/Calcom-Web/" target="_blank"><i class="fa-solid fa-globe fa-2x socialsIcon"></i></a>
+                                    <a href="https://www.youtube.com/channel/UCDp9F9yQ5YUx5-WegWRoOAA" target="_blank"><i class="fa-brands fa-youtube fa-2x socialsIcon"></i></a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="ProjectItem" id="puzzles" onclick="openThePopup('puzzles')">
                         <img src="https://hips.hearstapps.com/amv-prod-gp.s3.amazonaws.com/gearpatrol/wp-content/uploads/2020/04/How-To-Get-Better-At-Puzzles-gear-patrol-lead-feature-V2.jpg" alt="puzzles">
