--- a/flaskApp/templates/index.html
+++ b/flaskApp/templates/index.html
@@ -544,7 +544,7 @@
                                     Links:
                                 </h3>
                                 <div class="links">
-                                    <a href="https://a360.co/3VDHZrd" target="_blank"><i class="fa-solid fa-cube"></i></a>
+                                    <a href="https://a360.co/3VDHZrd" target="_blank"><i class="fa-solid fa-cube fa-2x socialsIcon"></i></a>
                                 </div>
                             </div>
                         </div>        
