added inverted spear

--- a/flaskApp/templates/index.html
+++ b/flaskApp/templates/index.html
@@ -205,6 +205,42 @@
                     </p> 
                 </div>
                 <div class="Projects">
+                    <div class="ProjectItem" id="invertedspear" onclick="openThePopup('invertedspear')">
+                        <img src="{{ url_for('static',filename='images/invertedspearmodel.png') }}" alt="Lives SMP">
+                        <h3>
+                            Inverted Spear of Heaven
+                        </h3>
+                        <p>
+                            "A dagger from jjk"
+                        </p>
+                        <div class="popupData">
+                            <div class="popupBanner">
+                                <img src="{{ url_for('static',filename='images/invertedspear.png') }}" alt="CODE RED" class="popupBanner">
+                            </div>
+                            <div class="popupHead">
+                                <h3>
+                                    Inverted Spear of Heaven
+                                </h3>
+                                <div class="xContainer">
+                                    <i class="fa-solid fa-x X" onclick="closeThePopup()"></i>
+                                </div>
+                            </div>
+                            <div class="popupContent">
+                                <p>
+                                    I made this to potentially print, and (maybe?) cosplay. If you read Jujutsu Kaisen, you know that the person who weilds this is none other than the absolute UNIT, Toji Fushiguro. 
+                                    Ever since I started working out, I always wanted to have a physique like his. Back, Triceps and forearms. This october, boys, this october.
+                                </p>
+                            </div>
+                            <div class="popupFooter">
+                                <h3>
+                                    Links:
+                                </h3>
+                                <div class="links">
+                                    <a href="https://a360.co/3w6y1V3" target="_blank"><i class="fa-solid fa-cube fa-2x socialsIcon"></i></a>
+                                </div>
+                            </div>
+                        </div>        
+                    </div>
                     <div class="ProjectItem" id="codejam" onclick="openThePopup('codejam')" data-hover="Click for More Information!">
                         <img src="{{ url_for('static',filename='images/CodeJAM.png') }}" alt="Foresight">
                         <h3 class="title">
