--- a/flaskApp/templates/index.html
+++ b/flaskApp/templates/index.html
@@ -206,7 +206,7 @@
                 </div>
                 <div class="Projects">
                     <div class="ProjectItem" id="det" onclick="openThePopup('det')">
-                        <img src="{{ url_for('static',filename='images/findingdeterminants.png') }}" alt="Lives SMP">
+                        <img src="{{ url_for('static',filename='images/tyrannosaurusred.png') }}" alt="Lives SMP">
                         <h3>
                             Tyrannosaurus Red
                         </h3>
