--- a/flaskApp/templates/exercise.html
+++ b/flaskApp/templates/exercise.html
@@ -47,82 +47,62 @@
                 me.<span class="function">Exercise</span>()
             </h1>
             <p>
-                """happy and healthy"""
+                """Day better, sun brighter"""
             </p>
         </div>
 
         <div class="mainContainer">
-            <div class="dayRight">
-                <div class="dayText">
-                    <h1>ARMS</h1>
-                </div>
-                <div class="exerciseBox">
-                    <p>
-                        Hybrid Curl 4x12 <br>
-                        Wrist Curl 4x12 <br>
-                        bodyweight tricep extensions <br>
-                    </p>
-                </div>
-            </div>
-            <div class="dayLeft">
-                <div class="exerciseBox">
-                    <p>
-                        Archer Push up 100x <br>
-                        dumbell flye 4x12 <br>
-                    </p>
-                </div>
-                <div class="dayText">
-                    <h1>Chest</h1>
-                </div>
-            </div>
-        </div>
-        <div class="dayRight">
-            <div class="dayText">
-                <h1>Shoulders</h1>
-            </div>
-            <div class="exerciseBox">
+            <div class="exercisecard">
+                <h3>
+                    <span class="function">back</span>() <span class="red">+</span> <span class="function">bi</span>()
+                </h3>
                 <p>
-                    Side lat raises 4x12 <br>
-                    Front lat raises 4x10 <br>
-                    Overhead press 4x16 <br>
-                    Shrugs 5x10 <br>
+                    4x12 hybrid curl  + stretch between sets<br>
+                    4x12 french curl<br>
+                    6x10 L sit pullups <br>
+                    4x12 bent over rows <br>
+                    4x10 seated rows WITH STRETCH <br>
                 </p>
             </div>
-        </div>
-        <div class="dayLeft">
-            <div class="exerciseBox">
+            <div class="exercisecard">
+                <h3>
+                    <span class="function">shoulders</span>()
+                </h3>
                 <p>
-                    Weighted squat jump 5x10 <br>
-                    Bulgarian split squat 4x12 <br>
-                    calf raises 100x <br>
+                    80x elevated pike press <br>
+                    4x12 Arnold press <br>
+                    4x12 Side lat raises <br>
                 </p>
             </div>
-            <div class="dayText">
-                <h1>Legs</h1>
-            </div>
-        </div>
-        <div class="dayRight">
-            <div class="dayText">
-                <h1>Back</h1>
-            </div>
-            <div class="exerciseBox">
+            <div class="exercisecard">
+                <h3>
+                    <span class="function">chest</span>() <span class="red">+</span> <span class="function">tri</span>()
+                </h3>
                 <p>
-                    Rows 4x25 <br>
-                    Rear delt flye 4x12 <br>
+                    5x20 archer pushups <br>
+                    4x8 bench press <br>
+                    4x16 bar tricep extensions <br>
                 </p>
             </div>
-        </div>
-        <div class="dayLeft">
-            <div class="exerciseBox">
+            <div class="exercisecard">
+                <h3>
+                    <span class="function">legs</span>()
+                </h3>
                 <p>
-                    Weighted Pogo jumps 50x <br>
-                    crunches 100x <br>
-                    push ups 100x (only when not hitting chest) <br>
-                    pull up 6x8 <br>
+                    4x8 pistol squats each leg <br>
+                    100x calf raises <br>
+                    4x8 nordic hamstring curl <br>
                 </p>
             </div>
-            <div class="dayText">
-                <h1>Do every day</h1>
+            <div class="exercisecard">
+                <h3>
+                    <span class="function">everyday</span>()
+                </h3>
+                <p>
+                    100x pushups <br>
+                    4x40seconds russian twists <br>
+                    stretching
+                </p>
             </div>
         </div>
     </div>
