--- a/flaskApp/templates/index.html
+++ b/flaskApp/templates/index.html
@@ -192,7 +192,7 @@
                     Prolificity
                 </p>
                 <p class="valueText">
-                    and maybe one day I'll be wiser.
+                    Its 100 degrees, why you feeling down? whats the problem?
                 </p>
             </div>
             <div class="Work" id="Work">
