--- a/flaskApp/static/styles/tableStyle.css
+++ b/flaskApp/static/styles/tableStyle.css
@@ -180,7 +180,7 @@ span.red{
     overflow-y: auto;
     overflow-x: hidden;
     margin-right: 2.5%;
-    margin-top: 5%;
+    margin-bottom: 5%;
 }
 
 .subPageTitle {
