--- a/flaskApp/templates/index.html
+++ b/flaskApp/templates/index.html
@@ -125,6 +125,10 @@
                             </h3>
                             <p>
 
+                                <span>Systems and software Intern</span> <br>
+                                <a href="https://www.lockheedmartin.com" target="_blank">@Lockheed Martin</a><br>
+                                2023<br><br>  
+
                                 <span>Founder</span> <br>
                                 <a href="https://resonancewebsite.herokuapp.com/" target="_blank">@Resonance</a><br>
                                 2022 - now <br><br>  
@@ -176,8 +180,8 @@
                     <div class="quote">
                         <p>
                             <span class="quoteHead">me.<span class="function">Quote</span>()</span> <br><br>
-                            &nbsp;&nbsp;&nbsp;&nbsp;<span class="quoteText">"This cheese would make a really good tiramisu."</span><br>
-                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="quoteFoot">-Gene, 2022</span>
+                            &nbsp;&nbsp;&nbsp;&nbsp;<span class="quoteText">"Be kind."</span><br>
+                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="quoteFoot">-Gene, 2023</span>
                         </p>
                     </div>
                 </div>
