change lm title

--- a/flaskApp/templates/index.html
+++ b/flaskApp/templates/index.html
@@ -125,7 +125,7 @@
                             </h3>
                             <p>
 
-                                <span>Systems and software Intern</span> <br>
+                                <span>Intern</span> <br>
                                 <a href="https://www.lockheedmartin.com" target="_blank">@Lockheed Martin</a><br>
                                 2023<br><br>  
 
